# whoa-german-numbers

./: Cargo.toml  README.md
src/: lib.rs  main.rs  words.rs
src/to_number/: mod.rs  tokenize.rs  words.rs
src/to_text/: big.rs  mod.rs  words.rs
tests/: to_number.rs  to_text.rs
