[package]
name = "whoa-german-numbers"
description = "parse and interpret written german numbers"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/spencermountain/whoa-german-numbers"
authors = ["Spencer Kelly <spencermountain@gmail.com>"]
keywords = ["german", "numbers"]
documentation = "https://docs.rs/whoa-german-numbers"
categories = ["parsing","text-processing"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

